Comments from Garry

--- a/samples/msgext-product-support-sso-ts/appPackage/manifest.json
+++ b/samples/msgext-product-support-sso-ts/appPackage/manifest.json
@@ -86,7 +86,10 @@
         "identity",
         "messageTeamMembers"
     ],
-    "webApplicationInfo": {"id": "${{BOT_ID}}", "resource": "api://${{BOT_DOMAIN}}/botid-${{BOT_ID}}" },
+    "webApplicationInfo": {
+        "id": "${{BOT_ID}}",
+        "resource": "api://${{BOT_DOMAIN}}/botid-${{BOT_ID}}"
+    },
     "validDomains": [
         "token.botframework.com",
         "${{BOT_DOMAIN}}"
